[package]
name = "art-util"
version = "0.1.0"
authors = ["Mason Smith <masonium@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
ndarray = "*"
rand = "*"
image = "*"
num = "*"
num-integer = "*"
num-traits = "*"
chrono = "*"
assert_approx_eq = "*"
svg = "*"
itertools = "*"
palette = "*"
