[package]
name = "art-util"
version = "0.1.0"
authors = ["Mason Smith <masonium@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
nalgebra-glm = "*"
ndarray = "*"
rand = "*"
rand_distr = "*"
image = "*"
num = "*"
num-integer = "*"
num-traits = "*"
chrono = "*"
assert_approx_eq = "*"
svg = "*"
itertools = "*"
palette = "*"
ncollide2d = "*"

[dev-dependencies]
nalgebra-glm = "*"
assert_approx_eq = "*"
decorum = "*"
