[package]
name = "art-util"
version = "0.1.0"
authors = ["Mason Smith <masonium@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.23"
nalgebra-glm = "0.9"
ndarray = "*"
rand = "0.7"
rand_distr = "0.3"
image = "*"
num = "*"
num-integer = "*"
num-traits = "*"
chrono = "*"
assert_approx_eq = "*"
svg = "*"
itertools = "*"
palette = "*"
ncollide2d = "*"
slotmap = "*"

[dev-dependencies]
nalgebra-glm = "0.9"
assert_approx_eq = "*"
decorum = "*"
